# haskell-discord-compiler

./: LICENSE  README.md  Setup.hs  haskell-discord-compiler.cabal  hie.yml  stack.yaml  token.txt
src/: Main.hs
src/files/: README.md
