name:                haskell-discord-compiler
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ranon-rat/haskell-discord-compiler#readme
license:             BSD3
license-file:        LICENSE
author:              ranon-rat
maintainer:          ranon-rat#0920
copyright:           2021 ranon-rat
category:            Web
build-type:          Simple
cabal-version:       ==1.10
extra-source-files:  README.md

executable haskell-discord-compiler
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:        -fplugin=Polysemy.Plugin
  default-extensions:
    DataKinds
    OverloadedLabels
    OverloadedStrings
    TypeApplications
    NamedFieldPuns
  default-language:    Haskell2010
  build-depends:       base 
                      , emoji 
                      , text
                      , directory
                      , regex-compat
                      , process
                      , random
                      , directory
                      , calamity
                      , text
                      , lens 
                      , generic-lens-labels
                      , data-default
                      , polysemy
                      , di
                      , df1 
                      , di-core
                      , polysemy 
                      , polysemy-plugin 
                      , stm 
                      , di-polysemy
                      , text-show 