name:                haskell-discord-compiler
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ranon-rat/haskell-discord-compiler#readme
license:             BSD3
license-file:        LICENSE
author:              ranon-rat
maintainer:          ranon-rat#0920
copyright:           2021 ranon-rat
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haskell-discord-compiler
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5
                      , emoji >= 0.1.0.2
                      , text
                      , discord-haskell
                      , directory>=1.3.6.2
                      , regex-compat>=0.92
                      , process>=1.6.11.0
                      , random>=1.2.0
                      , directory>=1.3.6.2
                      , unliftio>=0.2.18
                 